--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -102,8 +102,9 @@ MME :
 
     # List of federated mode maps
     # By default this list is empty
-    # Max number of federated mode maps is 20
+    # Max number of federated mode maps is 10
     MODE_MAP = (
+         # Sample mode maps
          #{ PLMN="001010"; IMSI_RANGE="001010000000001:001010000000500"; APN="internet"; MODE="LOCAL_SUBSCRIBER"},
          #{ PLMN="123456"; IMSI_RANGE="123456789123456:123456789123477"; APN="ims"; MODE="SPGW_SUBSCRIBER"}
     );
