[AGW]Force-overwrite in baremetal install (fix syslog overwritten problem)
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
+++ b/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
@@ -127,6 +127,7 @@
   become: yes
   apt:
     name: "{{ packages }}"
+    dpkg_options: 'force-overwrite,force-confdef,force-confold'
   vars:
     packages:
       - magma
