--- a/.github/workflows/gcc-problems.yml
+++ b/.github/workflows/gcc-problems.yml
@@ -112,7 +112,7 @@ jobs:
           options: -v ${{ github.workspace }}:/magma -e ABC=123
           run: |
             cd /magma/lte/gateway/
-            make build_oai 2>&1 > /magma/compile.log
+            CPPFLAGS="-Wextra" make build_oai 2>&1 > /magma/compile.log
             for file in ${{ steps.changed_files.outputs.all }};
             do grep $file /magma/compile.log | xo '/\/magma\/((.*):(\d+):(\d+):\s+(?:fatal\s)?(warning|error):\s+(.*))/$1/' || true;
             done;
@@ -170,7 +170,7 @@ jobs:
           options: -v ${{ github.workspace }}:/magma -e ABC=123
           run: |
             cd /magma/lte/gateway/
-            make build_session_manager 2>&1 > /magma/compile.log
+            CPPFLAGS="-Wextra" make build_session_manager 2>&1 > /magma/compile.log
             for file in ${{ steps.changed_files.outputs.all }};
             do grep $file /magma/compile.log | xo '/\/magma\/((.*):(\d+):(\d+):\s+(?:fatal\s)?(warning|error):\s+(.*))/$1/' || true;
             done;
