--- a/lte/gateway/configs/control_proxy.yml
+++ b/lte/gateway/configs/control_proxy.yml
@@ -39,3 +39,8 @@ proxy_cloud_connections: True
 
 # Allows http_proxy usage if the environment variable is present
 allow_http_proxy: False
+
+# Dummy URL to Sentry logging -> Modify to local sentry instance in order
+# to pipe error handling to sentry
+sentry_url: ""
+sentry_sample_rate: 1.0
