Signed-off-by: Shubham Tatvamasi <shubhamtatvamasi@gmail.com>
	modified:   orc8r/cloud/helm/orc8r/charts/certs/README.md

--- a/orc8r/cloud/helm/orc8r/charts/certs/values.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/values.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 The Magma Authors.
+# Copyright 2021 The Magma Authors.
 
 # This source code is licensed under the BSD-style license found in the
 # LICENSE file in the root directory of this source tree.
@@ -31,3 +31,6 @@ nms:
 
 controller:
   customIssuer:
+
+preInstallChecks:
+  enabled: true
