--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/certifier-certificate.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/certifier-certificate.yaml
@@ -1,10 +1,22 @@
+# Copyright 2021 The Magma Authors.
+
+# This source code is licensed under the BSD-style license found in the
+# LICENSE file in the root directory of this source tree.
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+{{- if .Values.create }}
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ .Release.Name }}-certifier-certificate
 spec:
   secretName: "{{ .Release.Name }}-certifier-tls"
-  commonName: "certifier.{{ .Values.dnsDomain }}"
+  commonName: "certifier.{{ required "dnsDomain must be provided" .Values.dnsDomain }}"
   subject:
     countries:
       - US
@@ -12,3 +24,4 @@ spec:
   issuerRef:
     name: {{ .Release.Name }}-selfsigned-issuer
   isCA: true
+{{- end }}
