--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/pre-install-checks.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/pre-install-checks.yaml
@@ -1,3 +1,16 @@
+# Copyright 2021 The Magma Authors.
+
+# This source code is licensed under the BSD-style license found in the
+# LICENSE file in the root directory of this source tree.
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+{{- if .Values.create }}
+{{- if .Values.preInstallChecks.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -11,4 +24,6 @@ data:
   cert_manager: "cert-manager is installed"
 {{- else }}
   cert_manager: {{ required "Please install cert-manager from https://cert-manager.io/docs/installation/kubernetes/" .Values.certManager }}
+{{- end }}
+{{- end }}
 {{- end }}
