pkcs12 password is set to required
Signed-off-by: Shubham Tatvamasi <shubhamtatvamasi@gmail.com>

--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/admin-operator-pkcs12-password.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/admin-operator-pkcs12-password.yaml
@@ -15,5 +15,5 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}-admin-operator-pkcs12-password
 data:
-  password: {{ .Values.adminOperator.pkcs12.password | b64enc | quote }}
+  password: {{ required "adminOperator.pkcs12.password must be provided" .Values.adminOperator.pkcs12.password | b64enc | quote }}
 {{- end }}
