--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/root-certificate.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/root-certificate.yaml
@@ -20,7 +20,7 @@ spec:
   subject:
     countries:
       - US
-  duration: 87600h
+  duration: {{ .Values.duration }}
   issuerRef:
     name: {{ .Release.Name }}-selfsigned-issuer
   isCA: true
