Added code at sgw_s8 task to hande creates session request and send to fedgw
Signed-off-by: rashmi <rashmi.sarwad@radisys.com>

--- a/lte/gateway/c/oai/tasks/sgw_s8/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/sgw_s8/CMakeLists.txt
@@ -25,7 +25,7 @@ add_library(TASK_SGW_S8 ${SGW_S8_SRC})
 
 target_link_libraries(TASK_SGW_S8
     COMMON
-    LIB_BSTR LIB_HASHTABLE
+    LIB_BSTR LIB_HASHTABLE LIB_S8_PROXY
     LIB_OPENFLOW_CONTROLLER TASK_SERVICE303
     cpp_redis tacopie protobuf
 )
