--- a/experimental/cloudstrapper/playbooks/roles/vars/build.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/build.yaml
@@ -2,8 +2,8 @@
 
 #Tune for custom builds and verify before build
 buildMagmaVersion: v1.4
-buildOrc8rLabel: 1.4.0
-buildHelmRepo: helm14
+buildOrc8rLabel: helmtest
+buildHelmRepo: helmtest
 
 #Build defaults
 buildAwsRegion: ap-northeast-1
@@ -17,7 +17,7 @@ buildGwInstanceType: t2.medium
 # Ubuntu 20.04 in us-east-1: ami-0885b1f6bd170450c
 # Ubuntu 20.04 in ap-northeast-1: ami-0f2dd5fc989207c82
 # Ubuntu 20.04 in ca-central-1: ami-02e44367276fe7adc
-buildUbuntuAmi: ami-02e44367276fe7adc
+buildUbuntuAmi: ami-0f2dd5fc989207c82
 
 #Debian 4.9.0.9 AMI n us-east-2:  ami-0c305b7817e9fd559
 #Debian 4.9.0.9 AMI n ap-northeast-1: ami-0aac5cd08e351ff0f
