--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ aliases:
     paths: "orc8r"
   - &cwf_build_verify
     paths: "cwf"
+  - &docs_only
+    paths: "docs"
 
 executors:
   node:
@@ -992,6 +994,8 @@ jobs:
       DOCUSAURUS_BASE_URL: /magma/
     steps:
       - checkout
+      - build/determinator:
+          <<: *docs_only
       - run:
           name: Setup docusaurus expected directory structure
           command: |
