--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -594,6 +594,32 @@ jobs:
             go vet ./...
       - magma_slack_notify
 
+  feg-lint:
+    machine:
+      image: ubuntu-1604:201903-01
+      docker_layer_caching: true
+    resource_class: large
+    environment:
+      GO111MODULE: 'on'
+    steps:
+      - checkout
+      - build/determinator:
+          <<: *federated_build_verify
+      - install-go
+      - run: echo 'export MAGMA_ROOT=$(pwd)' >> $BASH_ENV
+      - run: ./circleci/golang_before_install.sh
+      - run-with-retry:
+         command: go mod download
+         workdir: ${MAGMA_ROOT}/cwf/gateway
+      - run:
+          name: Generate test coverage
+          command: |
+            cd ${MAGMA_ROOT}/feg/gateway
+            make -C ${MAGMA_ROOT}/feg/gateway cover
+      - codecov/upload:
+          file: /home/circleci/project/feg/gateway/coverage/feg.gocov
+      - magma_slack_notify
+
   feg-precommit:
     machine:
       image: ubuntu-1604:201903-01
@@ -1106,6 +1132,7 @@ workflows:
 
   feg:
     jobs:
+      - feg-lint
       - feg-precommit
       - feg-build:
           requires:
