--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,10 +3,10 @@ circleci/ @tmdzk @mattymo @119Vik
 
 ci-scripts/ @rdefosse @tmdzk @mattymo @119Vik
 
-*/cloud/ @mpgermano @hcgatewood
+*/cloud/ @mpgermano @hcgatewood @karthiksubraveti @andreilee
 .golangci.yml @mpgermano @hcgatewood
 
-orc8r/ @mpgermano @hcgatewood @emakeev
+orc8r/ @mpgermano @hcgatewood @emakeev @karthiksubraveti @andreilee
 orc8r/tools/packer/ @tmdzk @mattymo @119Vik
 orc8r/cloud/deploy/bare-metal/ @tmdzk @mattymo @119Vik
 
@@ -36,6 +36,6 @@ lte/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 xwf/ @AyliD @aharonnovo @r-i-g
 feg/radius @AyliD @aharonnovo @r-i-g @themarwhal @mpgermano @uri200 @emakeev
 
-nms/ @karthiksubraveti @andreilee @Scott8440
+nms/ @karthiksubraveti @andreilee @Scott8440 @HannaFar
 
 CODEOWNERS @amarpad @electronjoe
