--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ aliases:
           - develop
   - &lte_build_verify
     paths: "orc8r lte"
+  - &c_cpp_build_verify
+    paths: "orc8r/gateway/c orc8r/protos lte/gateway/c lte/protos"
   - &federated_build_verify
     paths: "orc8r lte feg"
   - &all_gateways_build_verify
@@ -772,6 +774,8 @@ jobs:
       REVISION: << pipeline.git.revision >>
     steps:
       - checkout
+      - build/determinator:
+          <<: *c_cpp_build_verify
       - run:
           command: |
             cd $MAGMA_ROOT/lte/gateway/docker/mme
@@ -786,6 +790,8 @@ jobs:
       MAGMA_ROOT: /home/circleci/project
     steps:
       - checkout
+      - build/determinator:
+          <<: *c_cpp_build_verify
       - run:
           command: |
             cd $MAGMA_ROOT/lte/gateway/docker/mme
