--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/certifier-issuer.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/certifier-issuer.yaml
@@ -16,5 +16,5 @@ metadata:
   name: {{ .Release.Name }}-certifier-issuer
 spec:
   ca:
-    secretName: "{{ .Release.Name }}-certifier-tls"
+    secretName: {{ .Release.Name }}-certifier-tls
 {{- end }}
