--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/root-issuer.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/root-issuer.yaml
@@ -16,5 +16,5 @@ metadata:
   name: {{ .Release.Name }}-root-issuer
 spec:
   ca:
-    secretName: "{{ .Release.Name }}-root-tls"
+    secretName: {{ .Release.Name }}-root-tls
 {{- end }}
