--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/fluentd-certificate.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/fluentd-certificate.yaml
@@ -15,12 +15,13 @@ kind: Certificate
 metadata:
   name: {{ .Release.Name }}-fluentd-certificate
 spec:
-  secretName: "{{ .Release.Name }}-fluentd-tls"
-  commonName: "fluentd.{{ required "dnsDomain must be provided" .Values.dnsDomain }}"
+  secretName: {{ .Release.Name }}-fluentd-tls
+  commonName: fluentd.{{ required "domainName must be provided" .Values.domainName }}
   subject:
     countries:
       - US
   duration: {{ .Values.duration }}
+  renewBefore: {{ .Values.renewBefore }}
   issuerRef:
     name: {{ .Release.Name }}-selfsigned-issuer
   isCA: true
