--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/root-certificate.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/root-certificate.yaml
@@ -15,12 +15,13 @@ kind: Certificate
 metadata:
   name: {{ .Release.Name }}-root-certificate
 spec:
-  secretName: "{{ .Release.Name }}-root-tls"
-  commonName: "rootca.{{ required "dnsDomain must be provided" .Values.dnsDomain }}"
+  secretName: {{ .Release.Name }}-root-tls
+  commonName: rootca.{{ required "domainName must be provided" .Values.domainName }}
   subject:
     countries:
       - US
   duration: {{ .Values.duration }}
+  renewBefore: {{ .Values.renewBefore }}
   issuerRef:
     name: {{ .Release.Name }}-selfsigned-issuer
   isCA: true
