--- a/lte/gateway/c/oai/test/CMakeLists.txt
+++ b/lte/gateway/c/oai/test/CMakeLists.txt
@@ -13,26 +13,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Check REQUIRED)
-find_package(Threads REQUIRED)
-
-include_directories("/usr/src/googletest/googlemock/include/")
-set(MME_APP_UE_CONTEXT_IMSI_SRC
-    test_mme_app_ue_context.c
-)
-
-add_executable(test_mme_app_ue_context_imsi ${MME_APP_UE_CONTEXT_IMSI_SRC})
-target_link_libraries(test_mme_app_ue_context_imsi
-    TASK_MME_APP ${CHECK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
-    LIB_BSTR LIB_HASHTABLE
-)
-target_include_directories(test_mme_app_ue_context_imsi PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CHECK_INCLUDE_DIRS}
-)
-
-add_test(NAME test_mme_app_ue_context COMMAND test_mme_app_ue_context_imsi)
-
+add_subdirectory(mme_app_task)
 add_subdirectory(mobility_client)
 add_subdirectory(openflow)
 add_subdirectory(spgw_task)
