--- a/lte/gateway/c/oai/test/openflow/CMakeLists.txt
+++ b/lte/gateway/c/oai/test/openflow/CMakeLists.txt
@@ -1,8 +1,18 @@
+# Copyright 2020 The Magma Authors.
+# This source code is licensed under the BSD-style license found in the
+# LICENSE file in the root directory of this source tree.
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 add_compile_options(-std=c++11)
 
 set(OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 
 include_directories("${PROJECT_SOURCE_DIR}/openflow/controller")
+include_directories("/usr/src/googletest/googlemock/include/")
 link_directories(/usr/src/googletest/googlemock/lib/)
 add_executable(openflow_controller_test test_openflow_controller.cpp)
 add_executable(imsi_encoder_test test_imsi_encoder.cpp)
