--- a/lte/gateway/c/sctpd/test/CMakeLists.txt
+++ b/lte/gateway/c/sctpd/test/CMakeLists.txt
@@ -13,14 +13,15 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(SCTPD_TEST_LIB
-
-)
-
-target_link_libraries(SCTPD_TEST_LIB SCTPD_LIB gmock_main pthread rt)
+include_directories("${PROJECT_SOURCE_DIR}")
+include_directories("/usr/src/googletest/googlemock/include/")
+link_directories("/usr/src/googletest/googlemock/lib/")
 
 foreach(sctpd_test sctp_desc event_handler)
   add_executable(${sctpd_test}_test test_${sctpd_test}.cpp)
-  target_link_libraries(${sctpd_test}_test SCTPD_TEST_LIB)
+  target_link_libraries(${sctpd_test}_test
+      SCTPD_LIB
+      gmock_main gtest gtest_main gmock
+      pthread rt)
   add_test(test_${sctpd_test} ${sctpd_test}_test)
 endforeach(sctpd_test)
