Modified IMEI configuration into TAC+SNR
Signed-off-by: Pruthvi Hebbani <pruthvi.hebbani@radisys.com>

--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -105,12 +105,11 @@ MME :
     # Max number of blocked IMEI is 10
     # Length of IMEI=15 digits, length of IMEISV=16 digits
     BLOCKED_IMEI_LIST = (
-        # Sample IMEI without SVN i.e 15 digits used in attach req
-        # and identity response messages
-        #{ IMEI="990004823510370"}
-        # Sample IMEISV i.e 16 digits used in security mode
-        # complete message
-        #{ IMEI="9900048235103723"}
+        # Sample IMEI: TAC(8 digits) + SNR (6 digits)
+        #{ TAC="99000482"; SNR="351037"}
+        # Sample IMEI without SNR: TAC(8 digits)
+        #{ TAC="99000482";}
+        #{ TAC="99000482"; SNR=""}
     );
 
     CSFB :
