--- a/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
+++ b/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
@@ -23,7 +23,7 @@ ovs_build_config:
     - "openvswitch-common_2.8.10-1_amd64.deb"
     - "openvswitch-switch_2.8.10-1_amd64.deb"
 
-  packages_debian:
+  packages_ubuntu:
     - "oai-gtp_4.9-9_amd64.deb"
     - "libopenvswitch_2.14.3-1_amd64.deb"
     - "openvswitch-datapath-dkms_2.14.3-1_all.deb"
