--- a/lte/gateway/c/oai/oai_mme/CMakeLists.txt
+++ b/lte/gateway/c/oai/oai_mme/CMakeLists.txt
@@ -62,3 +62,19 @@ endif ( NOT EMBEDDED_SGW )
 if ( NOT S6A_OVER_GRPC )
     target_link_libraries(mme fdproto fdcore)
 endif ( NOT S6A_OVER_GRPC )
+
+if ( NOT EMBEDDED_SGW AND NOT S6A_OVER_GRPC )
+  if (EXISTS "/etc/os-release")
+    set(os_file_path "/etc/os-release")
+    file(STRINGS "${os_file_path}" data_list REGEX "^(ID|VERSION_ID|VERSION_CODENAME)=")
+    foreach(_var ${data_list})
+      if("${_var}" MATCHES "^(ID)=(.*)$")
+        set(os_name "${CMAKE_MATCH_2}")
+      endif()
+    endforeach()
+    if ("${os_name}" STREQUAL "\"rhel\"")
+      target_link_libraries(mme
+        gpr yaml z cares boost_program_options boost_filesystem boost_system boost_regex double-conversion address_sorting gflags unwind iberty dl)
+    endif()
+  endif()
+endif ( NOT EMBEDDED_SGW AND NOT S6A_OVER_GRPC )
