--- a/lte/gateway/configs/magmad.yml
+++ b/lte/gateway/configs/magmad.yml
@@ -14,7 +14,7 @@
 
 # log_level is set in mconfig. it can be overridden here
 
-print_grpc_payload: false
+print_grpc_payload: False
 
 # List of services for magmad to control
 magma_services:
