Enable IPFIX For LTE Setups (#4679)
This PR adds support for IPFIX record exports for LTE based deployments(previously only supported for CWF)

Commit log:

* Enable IPFIX for lte setups

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Update ovs patches

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix sessiond if

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Update playbook for ipfix ryu patch

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add patches to 2.8.9

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix spacing

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

--- a/lte/gateway/deploy/roles/magma/tasks/main.yml
+++ b/lte/gateway/deploy/roles/magma/tasks/main.yml
@@ -371,6 +371,12 @@
     - ipfix0
   when: full_provision
 
+- name: Copy ryu ipfix patch
+  copy:
+    src: nx_actions.py
+    dest: /home/vagrant/build/python/lib/python3.5/site-packages/ryu/ofproto/
+  when: full_provision
+
 - name: Patch python aio lib
   patch:
     src: patches/aioeventlet.py38.patch
