Fix connectiond libtins dependency
Signed-off-by: Nick Yurchenko <koolzz@fb.com>

--- a/lte/gateway/deploy/roles/dev_common/tasks/main.yml
+++ b/lte/gateway/deploy/roles/dev_common/tasks/main.yml
@@ -183,6 +183,8 @@
       - iperf3
       - libsystemd-dev
       - pkg-config
+      - libtins-dev
+      - libmnl-dev
   retries: 5
   when: preburn
 
