Generate rule version on dyanmic rule insertion
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/cwf/gateway/docker/docker-compose.integ-test.yml
+++ b/cwf/gateway/docker/docker-compose.integ-test.yml
@@ -66,6 +66,8 @@ services:
       core: -1
     security_opt:
       - seccomp:unconfined
+    environment:
+      MAGMA_PRINT_GRPC_PAYLOAD: 1
     privileged: true
     command: >
       sh -c "mkdir -p /var/opt/magma/cores &&
