[AGW][C] Omit test files from codecov
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/lte/gateway/Makefile
+++ b/lte/gateway/Makefile
@@ -213,11 +213,18 @@ test_%: build_common
 	$(call run_ctest, $(C_BUILD)/$*, $(GATEWAY_C_DIR)/$*, )
 
 coverage_oai: test_oai
-	lcov --capture --directory $(C_BUILD) --output-file /tmp/coverage_oai.info
+	lcov --capture --directory $(C_BUILD) --output-file /tmp/coverage_oai.info.raw
+	lcov -r /tmp/coverage_oai.info.raw "/*/test/*" -o /tmp/coverage_oai.info
+	rm -f `find $(C_BUILD) -name *.gcda` # Clean up any prior coverage data
+
+coverage_sctpd: test_sctpd
+	lcov --capture --directory $(C_BUILD) --output-file /tmp/coverage_sctpd.info.raw
+	lcov -r /tmp/coverage_sctpd.info.raw "/*/test/*" -o /tmp/coverage_sctpd.info
 	rm -f `find $(C_BUILD) -name *.gcda` # Clean up any prior coverage data
 
 coverage_session_manager: test_session_manager
-	lcov --capture --directory $(C_BUILD) --output-file /tmp/coverage_session_manager.info
+	lcov --capture --directory $(C_BUILD) --output-file /tmp/coverage_session_manager.info.raw
+	lcov -r /tmp/coverage_session_manager.info.raw "/*/test/*" -o /tmp/coverage_session_manager.info
 	rm -f `find $(C_BUILD) -name *.gcda` # Clean up any prior coverage data
 
 # format and test c/session_manager
@@ -274,5 +281,5 @@ base_coverage: build_oai build_sctpd build_session_manager build_connection_trac
 	rm -f `find $(C_BUILD) -name *.gcda` # Clean up any prior coverage data
 
 # Combine results of sub-coverages
-coverage: base_coverage coverage_oai coverage_session_manager
-	lcov -a /tmp/coverage_initialize.info -a /tmp/coverage_oai.info -a /tmp/coverage_session_manager.info -o $(C_BUILD)/coverage.info
+coverage: base_coverage coverage_oai coverage_sctpd coverage_session_manager
+	lcov -a /tmp/coverage_initialize.info -a /tmp/coverage_oai.info -a /tmp/coverage_sctpd.info -a /tmp/coverage_session_manager.info -o $(C_BUILD)/coverage.info
