changes related to AMF-PR #4595
Signed-off-by: chandra-77 <dangudubiyyam.c@altencalsoftlabs.com>

--- a/lte/gateway/c/oai/tasks/nas5g/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/nas5g/CMakeLists.txt
@@ -70,6 +70,7 @@ set(libnas_ies_OBJS
 	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GSMCause.cpp        
 	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GMMCause.cpp        
 	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GIMEISVRequest.cpp   
+	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GDNN.cpp   
     )
 
 add_library(LIB_NAS5G
