--- a/lte/gateway/c/session_manager/CMakeLists.txt
+++ b/lte/gateway/c/session_manager/CMakeLists.txt
@@ -38,11 +38,13 @@ if (NOT BUILD_TESTS)
 else() # BUILD_TESTS
 endif ()
 
-message("Adding code coverage build and linker flags for BUILD_TESTS")
 set (CMAKE_CXX_FLAGS_DEBUG
   "${CMAKE_CXX_FLAGS_DEBUG} -g -O0 -fprofile-arcs -ftest-coverage")
 set(CMAKE_EXE_LINKER_FLAGS_DEBUG
   "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
+
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO
+  "${CMAKE_C_FLAGS_RELWITHDEBINFO} -g -O1")
 
 set(OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 
