--- a/lte/gateway/deploy/roles/dev_common/tasks/main.yml
+++ b/lte/gateway/deploy/roles/dev_common/tasks/main.yml
@@ -193,6 +193,7 @@
     pkg:
     - libtins-dev
     - libmnl-dev
+    - libpcap-dev
   retries: 5
 
 ###############################################
