[MME][RHEL][OAI] fix on yum update
Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/ci-scripts/docker/Dockerfile.mme.ci.rhel8
+++ b/ci-scripts/docker/Dockerfile.mme.ci.rhel8
@@ -31,7 +31,7 @@ ENV C_BUILD=/build/c
 
 # Install a few tools (may not be necessary later on)
 ENV TZ=Europe/Paris
-RUN yum update && \
+RUN yum update -y && \
     yum -y install --enablerepo="ubi-8-codeready-builder" \
       libubsan \
       libasan \
