--- a/orc8r/cloud/helm/orc8r/charts/certs/templates/certifier-certificate.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/certs/templates/certifier-certificate.yaml
@@ -20,8 +20,8 @@ spec:
   subject:
     countries:
       - US
-  duration: {{ .Values.duration }}
-  renewBefore: {{ .Values.renewBefore }}
+  duration: {{ .Values.certifier.duration }}
+  renewBefore: {{ .Values.certifier.renewBefore }}
   issuerRef:
     name: {{ .Release.Name }}-selfsigned-issuer
   isCA: true
