scenario files for dsTest
Signed-off-by: rupa455 <rupa.d@altencalsoftlabs.com>

--- a/lte/gateway/c/oai/CMakeLists.txt
+++ b/lte/gateway/c/oai/CMakeLists.txt
@@ -118,6 +118,7 @@ add_subdirectory(common)
 add_subdirectory(lib)
 add_subdirectory(oai_mme)
 add_subdirectory(tasks)
+add_subdirectory(integ_test)
 
 if (BUILD_TESTS)
   enable_testing()
