--- a/lte/gateway/Vagrantfile
+++ b/lte/gateway/Vagrantfile
@@ -26,19 +26,19 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # - linux kernel from debian jessie backports
     # - updated vbguest-tool
     magma.vm.box = "magmacore/magma_dev"
-    magma.vm.hostname = "magma-dev"
+    magma.vm.hostname = "magma-dev-pr"
     magma.vm.box_version = "1.1.20210326"
 
     magma.vbguest.auto_update = false
 
     # Create a private network, which allows host-only access to the machine
     # using a specific IP.
-    magma.vm.network "private_network", ip: "192.168.60.142", nic_type: "82540EM"
+    magma.vm.network "private_network", ip: "192.168.60.182", nic_type: "82540EM"
     # iperf3 trfserver routable IP.
     magma.vm.network "private_network", ip: "192.168.129.1", nic_type: "82540EM"
 
     magma.vm.provider "virtualbox" do |vb|
-      vb.name = "magma-dev"
+      vb.name = "magma-dev-pr"
       vb.linked_clone = true
       vb.customize ["modifyvm", :id, "--memory", "6144"]
       vb.customize ["modifyvm", :id, "--cpus", "4"]
