POC for running gmock based unit tests for proto conversions
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/lte/gateway/c/oai/lib/pipelined_client/CMakeLists.txt
+++ b/lte/gateway/c/oai/lib/pipelined_client/CMakeLists.txt
@@ -40,6 +40,7 @@ link_directories(
 add_library(LIB_PIPELINED_CLIENT
     PipelinedServiceClient.cpp
     PipelinedClientAPI.cpp
+    proto_converters.cpp
     ${PROTO_SRCS}
     ${PROTO_HDRS}
 )
